; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/arm/mach-at91/extr_pm.c_sdram_selfrefresh_enable.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/arm/mach-at91/extr_pm.c_sdram_selfrefresh_enable.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@AT91_SDRAMC_LPR = common dso_local global i32 0, align 4
@saved_lpr = common dso_local global i32 0, align 4
@AT91_SDRAMC_LPCB = common dso_local global i32 0, align 4
@AT91_SDRAMC_LPCB_SELF_REFRESH = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @sdram_selfrefresh_enable to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @sdram_selfrefresh_enable() #0 {
  %1 = alloca i32, align 4
  %2 = load i32, i32* @AT91_SDRAMC_LPR, align 4
  %3 = call i32 @at91_sys_read(i32 %2)
  store i32 %3, i32* @saved_lpr, align 4
  %4 = load i32, i32* @saved_lpr, align 4
  %5 = load i32, i32* @AT91_SDRAMC_LPCB, align 4
  %6 = xor i32 %5, -1
  %7 = and i32 %4, %6
  store i32 %7, i32* %1, align 4
  %8 = load i32, i32* @AT91_SDRAMC_LPR, align 4
  %9 = load i32, i32* %1, align 4
  %10 = load i32, i32* @AT91_SDRAMC_LPCB_SELF_REFRESH, align 4
  %11 = or i32 %9, %10
  %12 = call i32 @at91_sys_write(i32 %8, i32 %11)
  ret void
}

declare dso_local i32 @at91_sys_read(i32) #1

declare dso_local i32 @at91_sys_write(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
